# second-brain-joplin

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  article.md  project-management.md  pyproject.toml
.github/: dependabot.yml  labeler.yml  project.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml  spike.yml  task.yml
.github/workflows/: checks.yml  ci.yml  labeler.yml  release.yml
docs/: INSTALL.md  install.md  notebook-structure.md  project-management.md  releasing.md  semantic-search.md
docs/reference/: second-brain-inspiration.md
src/second_brain_joplin/: __init__.py  cli.py  config.py  context.py  errors.py  joplin_client.py  models.py  server.py
src/second_brain_joplin/semantic/: __init__.py  backends.py  chunking.py  service.py  sync.py  types.py
src/second_brain_joplin/tools/: __init__.py  read.py  semantic.py  write.py
tests/: conftest.py  fakes.py  test_cli.py  test_config.py  test_context.py  test_joplin_client.py  test_metadata.py  test_semantic_chunking.py  test_semantic_service.py  test_semantic_sync.py  test_server.py  test_tools_read.py  test_tools_semantic.py
