[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain-joplin"
version = "0.1.0"
description = "MCP server that connects Claude Code (and other MCP clients) to your Joplin knowledge base"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "joplin", "second-brain", "claude", "ai", "knowledge-base"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
dev  = ["ruff", "pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/jomkz/second-brain-joplin"
Repository = "https://github.com/jomkz/second-brain-joplin"
Issues = "https://github.com/jomkz/second-brain-joplin/issues"

[project.scripts]
second-brain-joplin = "second_brain_joplin.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain_joplin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
