[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain-joplin"
dynamic = ["version"]
description = "MCP server that connects Claude Code (and other MCP clients) to your Joplin knowledge base"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "joplin", "second-brain", "claude", "ai", "knowledge-base"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Kept for a `pip install -e ".[test]"` fallback; the uv dev group below is the
# primary path.
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-cov>=5.0", "mypy>=1.11"]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/jomkz/second-brain-joplin"
Repository = "https://github.com/jomkz/second-brain-joplin"
Issues = "https://github.com/jomkz/second-brain-joplin/issues"

[project.scripts]
second-brain-joplin = "second_brain_joplin.server:main"

[tool.hatch.version]
path = "src/second_brain_joplin/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain_joplin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# The 90% coverage gate is enforced in CI via `--cov-fail-under=90` (see
# .github/workflows/checks.yml). It is intentionally NOT in addopts so that
# running a subset of tests locally (e.g. `pytest tests/test_cli.py`) does not
# spuriously fail the gate. Run `uv run pytest --cov-fail-under=90` to reproduce.
addopts = "--cov=second_brain_joplin --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["second_brain_joplin"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
